--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="favourites_menu">Favourites</string>
     <string name="your_favourite_pictures">Your favourite pictures</string>
     <string name="refresh_app">Refresh</string>
+    <string name="location_pictures">Location Pictures</string>
 </resources>
